[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-state-sim"
version = "0.1.0"
description = "Simulation tools for magic-state quantum network experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "QuantumNetworkSim contributors" }
]
keywords = ["quantum", "simulation", "magic-state", "networks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
data = ["pandas>=2.0"]
plot = ["matplotlib>=3.7"]
test = ["pytest>=8.0"]
dev = [
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["magic_state_sim*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
