[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-state-sim"
version = "0.1.0"
description = "A lightweight simulator for magic-state production, storage, networking, and consumption."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.22"]
license = {text = "MIT"}
authors = [{name = "QuantumNetworkSim contributors"}]

[tool.setuptools.packages.find]
include = ["magic_state_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
